force-app/main/default/objects/sma__MAAnalytic__c/sma__MAAnalytic__c.object-meta.xml
<CustomObject>
    <label>MapAnything Analytic</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>MapAnything Analytic</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>