force-app/main/default/objects/sma__MAAnalytic__c/fields/sma__DateTime__c.field-meta.xml
<CustomField>
    <fullName>sma__DateTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>