force-app/main/default/objects/sma__MAAnalytic__c/fields/sma__FavoriteLocation__c.field-meta.xml
<CustomField>
    <fullName>sma__FavoriteLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Favorite Location</label>
    <referenceTo>sma__MALocation__c</referenceTo>
    <relationshipLabel>MapAnything Analytics</relationshipLabel>
    <relationshipName>MapAnything_Analytics</relationshipName>
    <type>Lookup</type>
</CustomField>