force-app/main/default/objects/sma__MAAnalytic__c/fields/sma__MALayer__c.field-meta.xml
<CustomField>
    <fullName>sma__MALayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MA Layer</label>
    <referenceTo>sma__MALayer__c</referenceTo>
    <relationshipLabel>MapAnything Analytics</relationshipLabel>
    <relationshipName>MapAnything_Analytics</relationshipName>
    <type>Lookup</type>
</CustomField>