force-app/main/default/objects/sma__MAAnalytic__c/fields/sma__SavedQuery__c.field-meta.xml
<CustomField>
    <fullName>sma__SavedQuery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Saved Query</label>
    <referenceTo>sma__MASavedQry__c</referenceTo>
    <relationshipLabel>MapAnything Analytics</relationshipLabel>
    <relationshipName>MapAnything_Analytics</relationshipName>
    <type>Lookup</type>
</CustomField>