force-app/main/default/objects/sma__MAAnalytic__c/listViews/sma__All.listView-meta.xml
<ListView>
    <fullName>sma__All</fullName>
    <columns>sma__SavedQuery__c</columns>
    <columns>sma__MALayer__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>